--- a/resume-warm.html
+++ b/resume-warm.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
 <style>  
   body { line-height:1.5; margin:auto; padding:3px; max-width:1024px; display:none; FONT-FAMILY:CALIBRI,ARIAL; }
-  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:#A05; COLOR:WHITE }
+  h1  { font-size:200%; padding:16px; border:1px solid lightgrey; BACKGROUND:#c9c9c9; COLOR:WHITE }
   h2  { border-bottom:1px solid grey; padding:2px; COLOR:PURPLE }
 </style>
 <body onload="document.body.innerHTML=md.html(document.body.innerHTML); document.body.style.display='block';">
