--- a/resume-warm.html
+++ b/resume-warm.html
@@ -14,10 +14,10 @@
 <img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-woman.jpg" />
 
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  someone@email.com <br> mobile: +852 xxxxxxxx <br> Nationality: Chinese
+  kris1993[at]keio.jp <br> mobile: +81 xxxxxxxx <br> Nationality: Malaysian
 </span>
 
-# Casualwriter  
+# Kriskkumar Karunanithi  
 
 ## Executive Summary
 
