--- a/resume-warm.html
+++ b/resume-warm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Resume</title>
+<title>Kriskkumar Karunanithi - Resume</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.css">
 <script src="https://cdn.jsdelivr.net/gh/casualwriter/casual-markdown/dist/casual-markdown.js"></script>
@@ -14,7 +14,7 @@
 <img style="float:right;border-radius:50%;width:70px;padding:6px" src="avatar-woman.jpg" />
 
 <span style="float:right;padding:6px;COLOR:WHITE"> 
-  kris1993[at]keio.jp <br> mobile: +81 xxxxxxxx <br> Nationality: Malaysian
+  kris1993[at]keio.jp <br> mobile: +81 xxxxxxxx <br> Location: Tokyo, Japan
 </span>
 
 # Kriskkumar Karunanithi  
@@ -28,19 +28,25 @@
 
 ## Working Experience
 
-#### Current Company (Project Manager, 2015/08 - present) 
+#### Institute for Economic Studies, Keio University (Teaching Assistant, APR 2022 - JUL 2023) 
 
-* Lead team of 10 to oversee conception, requirement gathering, documentation and rollout.
-* Conduct troubleshooting, analysis and support. Gather user feedback, document bugs and change requests.
+* Provided comprehensive administrative support for applied economics workshops, including setup, attendee management, and troubleshooting (for only 3 semesters)
 
-#### Second Company (System Analyst, 2011/06 - 2015/07) 
 
-* Led team of 5 for application development
-* Coordinated with developers, support staff and vendors across Hong Kong, China, Taiwan
+#### Universiti Putra Malaysia (Research Assistant, NOV 2019 - DEC 2019) 
 
-#### My first Company (Analyst Programmer, 2005/01 - 2011/05)
+* Assisted a lecturer in conducting regression analysis using Stata 
+* Research focusing on the interaction effects of exchange rates and oil prices on economic growth
 
-* Develop multiple applications using Javascript, Java, PHP, Powerbuilder, Oracle
+#### Universiti Putra Malaysia (Research Assistant, OCT 2018 - DEC 2018)
+
+* Assisted a lecturer with data analysis in Stata
+* Performed Granger causality tests to explore the relationship between public debt and economic performance
+
+#### Alliance Islamic Bank Berhad - Malaysia (Intern, JUL 2016 - AUG 2016)
+
+* Developed a comprehensive Excel-based calculator for Islamic finance products, enabling accurate computation of monthly payments, loan balances, and other critical financial metrics.
+
 
 ## Projects
 
