--- a/resume-warm.html
+++ b/resume-warm.html
@@ -47,19 +47,24 @@
 
 * Developed a comprehensive Excel-based calculator for Islamic finance products, enabling accurate computation of monthly payments, loan balances, and other critical financial metrics.
 
+#### Various (Mathematics Tutor, DEC 2015 - MAR 2020)
+
+* Provided mathematics tutoring services to students aged 8 to 17
+
+  
+## Education
+
+### Keio University (Japan) (APR 2022 - MAR 2025)
+* Doctor of Philosophy - Economics
+
+### Keio University (Japan) (APR 2021 - MAR 2022)
+* Short-term International Student (Economics)
 
 ## Projects
 
 * [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
 * [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
 
-## Education & Qualifications
-
-* AWS Certification (2021/12)
-* Oracle Certified Professional (2020/02)
-* Project Management Professional (PMP) (2018/10)
-* Bachelor of Computer Science (Sep 2004)
-* The Chinese University of Hong Kong (2000 - 2004)
 
 ## Misc. Information
 
