--- a/resume-warm.html
+++ b/resume-warm.html
@@ -54,11 +54,18 @@
   
 ## Education
 
-### Keio University (Japan) (APR 2022 - MAR 2025)
+#### Keio University (Japan) (APR 2022 - MAR 2025)
 * Doctor of Philosophy - Economics
 
-### Keio University (Japan) (APR 2021 - MAR 2022)
+#### Keio University (Japan) (APR 2021 - MAR 2022)
 * Short-term International Student (Economics)
+
+#### Universiti Putra Malaysia (SEP 2017 - OCT 2019)
+* Master of Science (Economics)
+
+#### Universiti Putra Malaysia (SEP 2013 - AUG 2017)
+* Bachelor's Degree in Economics
+
 
 ## Projects
 
