--- a/resume-warm.html
+++ b/resume-warm.html
@@ -21,10 +21,10 @@
 
 ## Executive Summary
 
-* 10 years project/team management experience
-* PMP, OCP, AWS Certification
-* Hand-on experience in oracle database
-* Proficient in JavaScript, Java, Powerbuilder
+* 7 years of economic research experience
+* Proficient in EViews, Stata, R
+* Fluent in English & Bahasa Malaysia
+
 
 ## Working Experience
 
@@ -67,13 +67,14 @@
 * Bachelor's Degree in Economics
 
 
-## Projects
+## Workshops & Training
 
-* [Casual-Markdown](https://github.com/casualwriter/powerpage) - a lightweight markdown parser
-* [Powerpage](https://github.com/casualwriter/powerpage) - a lightweight browser for html applications
+* Machine Learning and Heterogeneous Effects Workshop - Mixtape Sessions (MAY 2023)
+* Regression Discontinuity Design Workshop - Mixtape Sessins (MAY 2023)
+* Non-linear Autoregressive Distributed Lag (NARDL) Workshop - iFINTELL - (FEB 2019)
 
 
-## Misc. Information
+## Skills
 
-* Languages: English (good), Cantonese (fluent/native), Mandarin (good)
-* Availability: 1 month's notice
+* Languages: English (fluent), Bahasa Malaysia (fluent), Japanese (basic)
+* Software: EViews, Stata, R
