--- a/resume-warm.html
+++ b/resume-warm.html
@@ -1,3 +1,12 @@
+---
+layout: archive
+title: ""
+classes: wide
+permalink: /cv/
+author_profile: true
+---
+
+
 <!DOCTYPE html>
 <title>Kriskkumar Karunanithi - Resume</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
